fixed search result in a grid

--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -16,7 +16,6 @@
 @advanced checkbox hideChannel              "  🔎 Hide Channel" 0
 @advanced checkbox hideRightSidebar         "  🫣 Hide right sidebar" 0
 
-
 @advanced checkbox antiShorts               "❌ Anti-Shorts" 0
 @advanced range customProfileRadius         "⚙️ Profile Radius" [50, 0, 50, 1, '%']
 @advanced range customBorderRadius          "⚙️ Border Radius" [0, 0, 24, 1, 'px']
@@ -433,7 +432,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
 
         if (playlistsGrouping) {
             /* (Inspire by Youtube Redux) Sort without js 😎 */
-            [page-subtype="home"] ytd-rich-item-renderer:has(#content.ytd-rich-item-renderer > ytd-rich-grid-media[mini-mode] > #dismissible.ytd-rich-grid-media > ytd-thumbnail.ytd-rich-grid-media > a#thumbnail[href*="&list="]) {
+            [page-subtype="home"] ytd-rich-item-renderer:has(#content.ytd-rich-item-renderer > ytd-rich-grid-media.ytd-rich-item-renderer > #dismissible.ytd-rich-grid-media > ytd-thumbnail.ytd-rich-grid-media > a#thumbnail[href*="&list="]) {
                 order: -1;
             }
         }
@@ -2358,12 +2357,65 @@ Support me: https://ko-fi.com/sapondanaisriwan
     if (customSP=="Enabled") {
         if (mainSearchResults) {
             ytd-search.ytd-page-manager {
-                
                 #contents.ytd-section-list-renderer {
                     display: grid;
                     grid-template-columns: repeat(auto-fit, minmax(246px, 1fr));
                 }
-        
+
+                #meta {
+                    display: contents;
+                }
+
+                #title-wrapper.ytd-video-renderer {
+                    order: 1;
+                }
+
+                ytd-video-renderer[use-search-ui] #channel-info.ytd-video-renderer {
+                    order: 2;
+                    padding: 0;
+                }
+
+                ytd-video-meta-block,
+                .ytd-video-meta-block[meta-block] {
+                    order: 3;
+                }
+
+                #badges.ytd-video-renderer {
+                    order: 4;
+                }
+
+                #channel-thumbnail.ytd-video-renderer {
+                    padding-right: 0;
+                    position: absolute;
+                    top: 12px;
+                }
+
+                yt-img-shadow.ytd-video-renderer {
+                    width: 36px;
+                    height: 36px;
+                    img {
+                        width: 36px;
+                        height: 36px;
+                    }
+                }
+
+                #channel-name.ytd-video-renderer {
+                    align-self: unset;
+                }
+
+                .text-wrapper.ytd-video-renderer {
+                    position: relative;
+                }
+
+
+                #channel-name.ytd-video-renderer,
+                #title-wrapper.ytd-video-renderer,
+                ytd-video-meta-block,
+                .ytd-video-meta-block[meta-block],
+                #badges.ytd-video-renderer {
+                    padding-left: 48px;
+                }
+
                 yt-showing-results-for-renderer,
                 #contents.ytd-item-section-renderer,
                 ytd-item-section-renderer,
@@ -2379,7 +2431,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
                 ytd-menu-renderer.ytd-video-renderer {
                     margin-top: 0;
                 }
-                
+
                 /* Remove title container -> "People also watch", "Learning related" and etc */
                 .grid-subheader.ytd-shelf-renderer,
                 ytd-exploratory-results-renderer.ytd-item-section-renderer,
@@ -2392,7 +2444,9 @@ Support me: https://ko-fi.com/sapondanaisriwan
                 #expandable-metadata.ytd-video-renderer:not(:empty) {
                     display: none;
                 }
-                
+
+                ytd-radio-renderer,
+                ytd-channel-renderer,
                 ytd-playlist-renderer,
                 ytd-video-renderer {
                     margin-left: calc(var(--ytd-rich-grid-item-margin)/2);
@@ -2450,6 +2504,10 @@ Support me: https://ko-fi.com/sapondanaisriwan
                     margin-bottom: 40px;
                 }
 
+                ytd-video-renderer[use-search-ui] .text-wrapper.ytd-video-renderer {
+                    max-width: unset;
+                    width: 100%;
+                }
 
                 #header-container {
                     margin-bottom: 16px;
@@ -2528,6 +2586,11 @@ Support me: https://ko-fi.com/sapondanaisriwan
                 }
 
 
+                /* Mix */
+                #content.ytd-radio-renderer {
+                    flex: none;
+                }
+
 
                 /* ----- Playlist ----- */
                 ytd-playlist-renderer {
@@ -2559,12 +2622,12 @@ Support me: https://ko-fi.com/sapondanaisriwan
                 #content.ytd-playlist-renderer {
                     flex: none;
                 }
-                
+
                 /* Force "View more" new line */
                 #view-more.ytd-playlist-renderer {
                     display: block;
                 }
-                
+
                 /* ----- Channel author ----- */
                 /* Hide bell icon */
                 #notification-preference-button {
@@ -2579,6 +2642,26 @@ Support me: https://ko-fi.com/sapondanaisriwan
                     line-height: 2rem;
                 }
             }
+        }
+
+        ytd-button-renderer.ytd-item-section-renderer:last-child,
+        ytd-compact-radio-renderer.ytd-item-section-renderer:last-child,
+        ytd-compact-video-renderer.ytd-item-section-renderer:last-child,
+        ytd-compact-movie-renderer.ytd-item-section-renderer:last-child,
+        ytd-compact-playlist-renderer.ytd-item-section-renderer:last-child,
+        ytd-emergency-onebox-renderer.ytd-item-section-renderer:last-child,
+        ytd-movie-renderer.ytd-item-section-renderer:last-child,
+        ytd-playlist-renderer.ytd-item-section-renderer:last-child,
+        ytd-show-renderer.ytd-item-section-renderer:last-child,
+        ytd-radio-renderer.ytd-item-section-renderer:last-child,
+        yt-search-no-results-renderer.ytd-item-section-renderer:last-child,
+        ytd-video-renderer.ytd-item-section-renderer:last-child,
+        ytd-channel-renderer.ytd-item-section-renderer:last-child,
+        ytd-promoted-sparkles-text-search-renderer.ytd-item-section-renderer:last-child,
+        ytd-web-answer-renderer.ytd-item-section-renderer:last-child,
+        ytd-clarification-renderer.ytd-item-section-renderer,
+        ytd-info-panel-container-renderer.ytd-item-section-renderer {
+            margin-bottom: 0;
         }
 
         ytd-search.ytd-page-manager {
